NicFWebApp/wwwroot/css/site.css
html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
  position: relative;
  min-height: 100%;
}

body {
    margin-bottom: 60px;
    background-image: url("/Images/Background.jpg");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
}

.icon {
    margin: 3px;
    margin-right: 2px;
    max-height: 1.5em !important;
    max-width: 1.5em !important;
    color: white !important;
}

h2, h3 {
    color: black;
}

.card-header {
    display: flex;
    justify-content: space-between;
}

.card {
    background-color: rgba(169,169,169,0.75);
    margin: 2px;
    background-clip: content-box;
}

.card-text {
    padding: 5px;
}

.locked {
    position: fixed;
    -webkit-transform: translateZ(0);
    vertical-align: top;
}

.portrait {
    width: 100%;
    border-radius: 150px;
    padding: calc(var(--bs-gutter-x) * .5) 0px 0px calc(var(--bs-gutter-x) * .5);
    display: block;
}

.sidebar {
    height: auto;
    max-width: 200px;
    background-color: #212529; /* Black */
}

.contact-info {
    color: white;
    font-size: 0.75em;
}

.centered-text {
    color: white;
    text-align: center;
}

